of isabelle.Isabelle_Scala_Tools. For example, see
$ISABELLE_HOME/etc/build.props and its isabelle.Tools, which defines the
standard Isabelle tools.

* The session build database now maintains an additional "uuid" column
to identity the original build process uniquely. Thus other tools may
dependent symbolically on a particular build instance.

* Command-line tool "isabelle scala_project" supports Gradle as
alternative to Maven: either option -G or -M needs to be specified
explicitly. This increases the chances that the Java/Scala IDE project
works properly.

* Command-line tool "isabelle hg_sync" synchronizes the working
directory of a local Mercurial repository with a target directory, using
rsync notation for destinations.

* Command-line tool "isabelle sync" synchronizes Isabelle + AFP
repositories with a target directory, based on "isabelle hg_sync". Local
jars and sessions images may be uploaded as well, to avoid redundant
builds on the remote side. This tool requires a Mercurial clone of the
Isabelle repository: a regular download of the distribution will not
work!

* Command-line tool "isabelle log" has been refined to support multiple
sessions, and to match messages against regular expressions (using Java
Pattern syntax).

* System option "show_states" controls output of toplevel command states
(notably proof states) in batch-builds; in interactive mode this is
always done on demand. The option is relevant for tools that operate on
exported PIDE markup, e.g. document presentation or diagnostics. For
example:

  isabelle build -o show_states FOL-ex
  isabelle log -v -U FOL-ex

Option "show_states" is also the default for the configuration option
"show_results" within the formal context.

Note that printing intermediate states may cause considerable slowdown
in building a session.

* Session ROOT entries support 'export_classpath' to augment the
Java/Scala name space for tools that allow dynamic loading of service